# wheel-scout

./: .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml
src/wheel_scout/: __init__.py  config.py  main.py
src/wheel_scout/earnings/: client.py
src/wheel_scout/notifier/: discord.py
src/wheel_scout/scanner/: engine.py  filters.py  models.py  universe.py
src/wheel_scout/schwab/: alpaca_client.py  client.py  models.py
