[project]
name = "wheel-scout"
version = "0.1.0"
description = "Daily options wheel strategy scanner — screens Schwab chains, ranks wheel candidates, pushes to Discord."
readme = "README.md"
authors = [
    { name = "Gio Mini Labs", email = "minigiobot@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "schwab-py>=1.5.1",
    "tzdata>=2026.2",
    "uvicorn>=0.49.0",
]

[project.scripts]
wheel-scout = "wheel_scout.main:app"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
